--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CreativeLoginDesigns</string>
+    <string name="app_name">Uliza Ai</string>
 
     <string name="register">REGISTER</string>
     <string name="login_email_hint">Email</string>
